--- a/data-raw/vignettes/erikmisc-e_classification_example.Rmd
+++ b/data-raw/vignettes/erikmisc-e_classification_example.Rmd
@@ -34,7 +34,7 @@ library(dplyr)
 data(dat_mtcars_e)
 
 dat_mtcars_e <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   dplyr::mutate(
     vs_V = ifelse(vs == "V-shaped", 1, 0) # 0-1 binary for logistic regression
   )
@@ -63,7 +63,7 @@ fit_glm_vs <-
 
 cat("Test residual deviance for lack-of-fit (if > 0.10, little-to-no lack-of-fit)\n")
 dev_p_val <- 1 - pchisq(fit_glm_vs$deviance, fit_glm_vs$df.residual)
-dev_p_val %>% print()
+dev_p_val |> print()
 
 car::Anova(fit_glm_vs, type = 3)
 summary(fit_glm_vs)
@@ -98,7 +98,7 @@ glm_roc <-
   , cm_mode       = c("sens_spec", "prec_recall", "everything")[3]
   )
 
-glm_roc$roc_curve_best %>% print(width = Inf)
+glm_roc$roc_curve_best |> print(width = Inf)
 glm_roc$p_roc
 glm_roc$confusion_matrix
 ```
@@ -113,9 +113,9 @@ glm_roc$confusion_matrix
 
 #### Before variable selection
 dat.class <-
-  dat_sub %>%
-  select(DX, one_of(Var$list[[this_var_list]])) %>%
-  na.omit() %>%
+  dat_sub |>
+  select(DX, one_of(Var$list[[this_var_list]])) |>
+  na.omit() |>
   as.data.frame()
 dim(dat.class)
 table(dat.class$DX)
@@ -127,10 +127,10 @@ out.summary <- f_rf_cat2(y.class, x.class, dat.class, sw.plots=FALSE, sw.return=
 #out.summary
 
 v_imp <-
-  out.summary$importance %>%
-  as_tibble(rownames = "Var") %>%
+  out.summary$importance |>
+  as_tibble(rownames = "Var") |>
   arrange(desc(all))
-v_imp %>% print(n = Inf)
+v_imp |> print(n = Inf)
 
 #### After variable selection
 v_list <- v_imp$Var
@@ -148,10 +148,10 @@ v_list <-
   v_list[v_list_ind]
 
 dat.class <-
-  dat_sub %>%
-  select(DX, one_of(v_list)) %>%  # Var$list$var_demo[c(3,4)],
-  mutate(DX = factor(DX)) %>%
-  na.omit() %>%
+  dat_sub |>
+  select(DX, one_of(v_list)) |>  # Var$list$var_demo[c(3,4)],
+  mutate(DX = factor(DX)) |>
+  na.omit() |>
   as.data.frame()
 dim(dat.class)
 table(dat.class$DX)
@@ -163,17 +163,17 @@ out.summary <- f_rf_cat2(y.class, x.class, dat.class, sw.plots=FALSE, sw.return=
 #out.summary
 
 v_imp <-
-  out.summary$importance %>%
-  as_tibble(rownames = "Var") %>%
+  out.summary$importance |>
+  as_tibble(rownames = "Var") |>
   arrange(desc(all))
-v_imp %>% print(n = Inf)
+v_imp |> print(n = Inf)
 
 out_rf <-
   f_RF_label_plot_summary(
     dat.class
   , out.summary
   , v_imp
-  , var_list_label_match %>% filter(var_type %in% c("var_demo", this_var_list))
+  , var_list_label_match |> filter(var_type %in% c("var_demo", this_var_list))
   )
 
 out_tab_plot$vimp_tab [[this_var_list]]$DX    <- out_rf$out_rf_v_imp
