--- a/data-raw/vignettes/erikmisc-e_model_all_subsets_formula.Rmd
+++ b/data-raw/vignettes/erikmisc-e_model_all_subsets_formula.Rmd
@@ -66,7 +66,7 @@ We'll fit all the linear models between the maximal and minimal models:
 Then we select the model with the lowest BIC statistic.
 
 ```{r}
-dat_mtcars_e %>% head(3)
+dat_mtcars_e |> head(3)
 
 # table of the candidate models
 form_table <-
@@ -112,8 +112,8 @@ for (i_form in seq_len(length(form_list))) {
 
 # sort the models by a criterion
 lm_fit_criteria <-
-  lm_fit_list_criteria %>%
-  dplyr::bind_rows() %>%
+  lm_fit_list_criteria |>
+  dplyr::bind_rows() |>
   dplyr::arrange(
     # arrange models by this model criterion
     bic               # ascending by bic (best on top)
@@ -121,16 +121,16 @@ lm_fit_criteria <-
   )
 
 # print the head and tail of fit criteria table
-lm_fit_criteria %>% head()
-lm_fit_criteria %>% tail(3)
+lm_fit_criteria |> head()
+lm_fit_criteria |> tail(3)
 
 # best model ID
 lm_fit_criteria$model_id[1]
 
 # summarize "best" model
-lm_fit_list[[ lm_fit_criteria$model_id[1] ]] %>%
+lm_fit_list[[ lm_fit_criteria$model_id[1] ]] |>
   car::Anova(type = 3)
-lm_fit_list[[ lm_fit_criteria$model_id[1] ]] %>%
+lm_fit_list[[ lm_fit_criteria$model_id[1] ]] |>
   summary()
 ```
 
@@ -154,14 +154,14 @@ Then we select the model with the lowest cAIC statistic.
 set.seed(76543)
 
 dat_ergoStool_e <-
-  dat_ergoStool_e %>%
+  dat_ergoStool_e |>
   # add a few noise variables just to use for model selection example
   dplyr::mutate(
     x1 = stats::rnorm(n = dplyr::n())
   , x2 = stats::rnorm(n = dplyr::n())
   , x3 = stats::rnorm(n = dplyr::n())
   )
-dat_ergoStool_e %>% head(8)
+dat_ergoStool_e |> head(8)
 
 # table of the candidate models
 form_table <-
@@ -208,8 +208,8 @@ for (i_form in seq_len(length(form_list))) {
 
 # sort the models by a criterion
 lmer_fit_criteria <-
-  lmer_fit_list_criteria %>%
-  dplyr::bind_rows() %>%
+  lmer_fit_list_criteria |>
+  dplyr::bind_rows() |>
   dplyr::arrange(
     # arrange models by this model criterion
     caic              # ascending by caic (best on top)
@@ -217,16 +217,16 @@ lmer_fit_criteria <-
   )
 
 # print the head and tail of fit criteria table
-lmer_fit_criteria %>% head()
-lmer_fit_criteria %>% tail(3)
+lmer_fit_criteria |> head()
+lmer_fit_criteria |> tail(3)
 
 # best model ID
 lmer_fit_criteria$model_id[1]
 
 # summarize "best" model
-lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] |>
   car::Anova(type = 3)
-lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] |>
   summary()
 ```
 
@@ -307,8 +307,8 @@ lmer_fit_list_criteria <-
 
 # sort the models by a criterion
 lmer_fit_criteria <-
-  lmer_fit_list_criteria %>%
-  dplyr::bind_rows() %>%
+  lmer_fit_list_criteria |>
+  dplyr::bind_rows() |>
   dplyr::arrange(
     # arrange models by this model criterion
     caic              # ascending by caic (best on top)
@@ -316,16 +316,16 @@ lmer_fit_criteria <-
   )
 
 # print the head and tail of fit criteria table
-lmer_fit_criteria %>% head()
-lmer_fit_criteria %>% tail(3)
+lmer_fit_criteria |> head()
+lmer_fit_criteria |> tail(3)
 
 # best model ID
 lmer_fit_criteria$model_id[1]
 
 # summarize "best" model
-lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] |>
   car::Anova(type = 3)
-lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] |>
   summary()
 
 
