--- a/data-raw/vignettes/erikmisc-e_multiple_regression_example.Rmd
+++ b/data-raw/vignettes/erikmisc-e_multiple_regression_example.Rmd
@@ -35,13 +35,13 @@ library(erikmisc)
 ```{r}
 data(dat_mtcars_e)
 dat_mtcars_e <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   dplyr::mutate(
-    mpg_log2 = mpg %>% log2()
-  ) %>%
+    mpg_log2 = mpg |> log2()
+  ) |>
   dplyr::slice(
     -c(29, 31)
-  ) %>%
+  ) |>
   dplyr::select(
     model, mpg, mpg_log2
   , tidyselect::everything()
@@ -140,7 +140,7 @@ tab_lm_best <-
   ### consider these options if you temporarily need a wider output in your Rmd output
   op <- options(); # saving old options
   options(width = 200) # setting command window output text width wider
-tab_lm_best %>% print(n = Inf, width = Inf)
+tab_lm_best |> print(n = Inf, width = Inf)
   options(op); # reset (all) initial options
 ```
 
@@ -149,7 +149,7 @@ tab_lm_best %>% print(n = Inf, width = Inf)
 * For demonstration purposes, I'm choosing Model 9 because it has both `factor:numeric` and `numeric:numeric` interactions.
 
 ```{r}
-tab_lm_best[9, ] %>% print(width = Inf)
+tab_lm_best[9, ] |> print(width = Inf)
 
 form_model_red <-
   mpg_log2 ~ cyl + hp + wt + cyl:wt + hp:wt
@@ -195,7 +195,7 @@ lm_fit_contrasts <-
 * The output contains lists for tables, plots, and text.
 
 ```{r}
-lm_fit_contrasts %>% names()
+lm_fit_contrasts |> names()
 ```
 
 ## tables
