--- a/data-raw/vignettes/erikmisc-tables_examples.Rmd
+++ b/data-raw/vignettes/erikmisc-tables_examples.Rmd
@@ -38,14 +38,14 @@ dat_mtcars_e <-
 
 ## ### Version for Max
 ## dat_mtcars_e <-
-##   datasets::mtcars %>%
+##   datasets::mtcars |>
 ##   tibble::as_tibble(
 ##     rownames = "model"
-##   ) %>%
+##   ) |>
 ##   dplyr::mutate(
-##     cyl = cyl %>% factor(levels = c(4, 6, 8), labels = c("four", "six", "eight"))
-##   , vs  = vs  %>% factor(levels = c(0, 1), labels = c("V-shaped", "straight"))
-##   , am  = am  %>% factor(levels = c(0, 1), labels = c("automatic", "manual"))
+##     cyl = cyl |> factor(levels = c(4, 6, 8), labels = c("four", "six", "eight"))
+##   , vs  = vs  |> factor(levels = c(0, 1), labels = c("V-shaped", "straight"))
+##   , am  = am  |> factor(levels = c(0, 1), labels = c("automatic", "manual"))
 ##   )
 ##
 ## # Label columns
@@ -73,12 +73,12 @@ dat_mtcars_e <-
 ## str(dat_mtcars_e)
 
 
-dat_mtcars_e %>%
+dat_mtcars_e |>
   str()
 
 # drastically change scale for two numeric variables
 dat_mtcars_e <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   dplyr::mutate(
     drat = drat * 1e3
   , qsec = qsec / 1e3
@@ -137,7 +137,7 @@ gtsummary::reset_gtsummary_theme()                   # Reset theme
 
 ```{r}
 table1_out <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   gtsummary::tbl_summary(
     by           = Var[["list"]][["var_groups"]][1] # use gtsummary::tbl_strata for more than 1
   # , label        = NULL                          # automatically uses the label attribute
@@ -150,24 +150,24 @@ table1_out <-
   # , sort         = NULL
   # , percent      = NULL
   , include      = Var[["list"]][["var_demo"]]
-  ) %>%
-  gtsummary::add_p()          %>%  # add p-values to the output comparing values across groups
-  gtsummary::add_q(method = c("holm", "hochberg", "hommel", "bonferroni", "BH", "BY", "fdr", "none")[7]) %>%  # add a column of q values to control for multiple comparisons
-  gtsummary::bold_p(t = 0.05, q = FALSE) %>% # Bold significant p-values or q-values
-  #gtsummary::add_difference() %>%  # add column for difference between two group, confidence interval, and p-value
-  #gtsummary::add_ci()         %>%  # add confidence intervals
-  gtsummary::add_overall()    %>%  # add a column with overall summary statistics
-  gtsummary::add_stat_label() %>%  # add label for the summary statistics shown in each row
-  gtsummary::add_n()          %>%  # add a column with N (or N missing) for each variable
-  gtsummary::bold_labels()    %>%  # bold variable name labels
-  gtsummary::italicize_levels() %>% # italicize levels
+  ) |>
+  gtsummary::add_p()          |>  # add p-values to the output comparing values across groups
+  gtsummary::add_q(method = c("holm", "hochberg", "hommel", "bonferroni", "BH", "BY", "fdr", "none")[7]) |>  # add a column of q values to control for multiple comparisons
+  gtsummary::bold_p(t = 0.05, q = FALSE) |> # Bold significant p-values or q-values
+  #gtsummary::add_difference() |>  # add column for difference between two group, confidence interval, and p-value
+  #gtsummary::add_ci()         |>  # add confidence intervals
+  gtsummary::add_overall()    |>  # add a column with overall summary statistics
+  gtsummary::add_stat_label() |>  # add label for the summary statistics shown in each row
+  gtsummary::add_n()          |>  # add a column with N (or N missing) for each variable
+  gtsummary::bold_labels()    |>  # bold variable name labels
+  gtsummary::italicize_levels() |> # italicize levels
   gtsummary::modify_caption("Table title")
 
 # print to Viewer
 table1_out
 
 # export to Excel
-table1_out %>%
+table1_out |>
   gtsummary::as_hux_xlsx(file = "Table1_out.xlsx")
 ```
 
@@ -176,7 +176,7 @@ table1_out %>%
 
 ```{r}
 table1_out_diff <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   gtsummary::tbl_summary(
     by           = Var[["list"]][["var_groups"]][2] # use gtsummary::tbl_strata for more than 1
   # , label        = NULL                          # automatically uses the label attribute
@@ -189,16 +189,16 @@ table1_out_diff <-
   # , sort         = NULL
   # , percent      = NULL
   , include      = Var[["list"]][["var_demo"]]
-  ) %>%
-  #gtsummary::add_p()          %>%  # add p-values to the output comparing values across groups
-  #gtsummary::add_q()          %>%  # add a column of q values to control for multiple comparisons
-  #gtsummary::bold_p(t = 0.05, q = FALSE) %>% # Bold significant p-values or q-values
-  gtsummary::add_difference() %>%  # add column for difference between two group, confidence interval, and p-value
-  #gtsummary::add_ci()         %>%  # add confidence intervals
-  gtsummary::add_overall()    %>%  # add a column with overall summary statistics
-  gtsummary::add_stat_label() %>%  # add label for the summary statistics shown in each row
-  gtsummary::add_n()          %>%  # add a column with N (or N missing) for each variable
-  #gtsummary::bold_labels()    %>%  # bold variable name labels
+  ) |>
+  #gtsummary::add_p()          |>  # add p-values to the output comparing values across groups
+  #gtsummary::add_q()          |>  # add a column of q values to control for multiple comparisons
+  #gtsummary::bold_p(t = 0.05, q = FALSE) |> # Bold significant p-values or q-values
+  gtsummary::add_difference() |>  # add column for difference between two group, confidence interval, and p-value
+  #gtsummary::add_ci()         |>  # add confidence intervals
+  gtsummary::add_overall()    |>  # add a column with overall summary statistics
+  gtsummary::add_stat_label() |>  # add label for the summary statistics shown in each row
+  gtsummary::add_n()          |>  # add a column with N (or N missing) for each variable
+  #gtsummary::bold_labels()    |>  # bold variable name labels
   #gtsummary::italicize_levels()   # italicize levels
   gtsummary::modify_caption("Table title")
 
@@ -206,7 +206,7 @@ table1_out_diff <-
 table1_out_diff
 
 # export to Excel
-table1_out_diff %>%
+table1_out_diff |>
   gtsummary::as_hux_xlsx(file = "Table1_out_diff.xlsx")
 ```
 
@@ -216,11 +216,11 @@ table1_out_diff %>%
 # Use one "strata" and one "by", two variables works fine
 
 table1_out_strata <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   gtsummary::tbl_strata(
     strata       = Var[["list"]][["var_groups"]][3] # use gtsummary::tbl_strata for more than 1 (don't use for more than 1 here)
   , .tbl_fun =
-      ~ .x %>%
+      ~ .x |>
         gtsummary::tbl_summary(
           by           = Var[["list"]][["var_groups"]][2] # use gtsummary::tbl_strata for more than 1
         # , label        = NULL                          # automatically uses the label attribute
@@ -233,27 +233,27 @@ table1_out_strata <-
         # , sort         = NULL
         # , percent      = NULL
         #, include      = Var[["list"]][["var_demo"]]  # not working here or in the tbl_strata() argument
-        ) %>%
-        gtsummary::add_p()          %>%  # add p-values to the output comparing values across groups
-        #gtsummary::add_q()          %>%  # add a column of q values to control for multiple comparisons
-        gtsummary::bold_p(t = 0.05, q = FALSE) %>% # Bold significant p-values or q-values
-        #gtsummary::add_difference() %>%  # add column for difference between two group, confidence interval, and p-value
-        #gtsummary::add_ci()         %>%  # add confidence intervals
-        gtsummary::add_overall()    %>%  # add a column with overall summary statistics
-        gtsummary::add_stat_label() %>%  # add label for the summary statistics shown in each row
+        ) |>
+        gtsummary::add_p()          |>  # add p-values to the output comparing values across groups
+        #gtsummary::add_q()          |>  # add a column of q values to control for multiple comparisons
+        gtsummary::bold_p(t = 0.05, q = FALSE) |> # Bold significant p-values or q-values
+        #gtsummary::add_difference() |>  # add column for difference between two group, confidence interval, and p-value
+        #gtsummary::add_ci()         |>  # add confidence intervals
+        gtsummary::add_overall()    |>  # add a column with overall summary statistics
+        gtsummary::add_stat_label() |>  # add label for the summary statistics shown in each row
         gtsummary::add_n()               # add a column with N (or N missing) for each variable
-        #gtsummary::bold_labels()    %>%  # bold variable name labels
+        #gtsummary::bold_labels()    |>  # bold variable name labels
         #gtsummary::italicize_levels()   # italicize levels
 
   #, .header = "**{strata}**, N = {n}"
-  ) %>%
+  ) |>
   gtsummary::modify_caption("Table title")
 
 # print to Viewer
 table1_out_strata
 
 # export to Excel
-table1_out_strata %>%
+table1_out_strata |>
   gtsummary::as_hux_xlsx(file = "Table1_out_strata.xlsx")
 ```
 
@@ -262,11 +262,11 @@ table1_out_strata %>%
 
 ```{r}
 table1_out_diff_strata <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   gtsummary::tbl_strata(
     strata       = Var[["list"]][["var_groups"]][3] # use gtsummary::tbl_strata for more than 1 (don't use for more than 1 here)
   , .tbl_fun =
-      ~ .x %>%
+      ~ .x |>
         gtsummary::tbl_summary(
           by           = Var[["list"]][["var_groups"]][2] # use gtsummary::tbl_strata for more than 1
         # , label        = NULL                          # automatically uses the label attribute
@@ -279,50 +279,50 @@ table1_out_diff_strata <-
         # , sort         = NULL
         # , percent      = NULL
         #, include      = Var[["list"]][["var_demo"]]  # not working here or in the tbl_strata() argument
-        ) %>%
-        #gtsummary::add_p()          %>%  # add p-values to the output comparing values across groups
-        #gtsummary::add_q()          %>%  # add a column of q values to control for multiple comparisons
-        #gtsummary::bold_p(t = 0.05, q = FALSE) %>% # Bold significant p-values or q-values
-        gtsummary::add_difference() %>%  # add column for difference between two group, confidence interval, and p-value
-        #gtsummary::add_ci()         %>%  # add confidence intervals
-        gtsummary::add_overall()    %>%  # add a column with overall summary statistics
-        gtsummary::add_stat_label() %>%  # add label for the summary statistics shown in each row
+        ) |>
+        #gtsummary::add_p()          |>  # add p-values to the output comparing values across groups
+        #gtsummary::add_q()          |>  # add a column of q values to control for multiple comparisons
+        #gtsummary::bold_p(t = 0.05, q = FALSE) |> # Bold significant p-values or q-values
+        gtsummary::add_difference() |>  # add column for difference between two group, confidence interval, and p-value
+        #gtsummary::add_ci()         |>  # add confidence intervals
+        gtsummary::add_overall()    |>  # add a column with overall summary statistics
+        gtsummary::add_stat_label() |>  # add label for the summary statistics shown in each row
         gtsummary::add_n()               # add a column with N (or N missing) for each variable
-        #gtsummary::bold_labels()    %>%  # bold variable name labels
+        #gtsummary::bold_labels()    |>  # bold variable name labels
         #gtsummary::italicize_levels()   # italicize levels
 
   #, .header = "**{strata}**, N = {n}"
-  ) %>%
+  ) |>
   gtsummary::modify_caption("Table title")
 
 # print to Viewer
 table1_out_diff_strata
 
 # export to Excel
-table1_out_diff_strata %>%
+table1_out_diff_strata |>
   gtsummary::as_hux_xlsx(file = "Table1_out_diff_strata.xlsx")
 ```
 
 ## Other details
 
 ```{r}
-##   # gtsummary::add_stat()       %>%  # generic function to add a column with user-defined values
+##   # gtsummary::add_stat()       |>  # generic function to add a column with user-defined values
 ##
 ##
 ##   ## Note at bottom of table, converts from tbl_summary to gt, which changes some functionality
-##   #as_gt() %>%                      # Add a note
-##   #gt::tab_source_note(gt::md("*mtcars is from the **datasets** package*")) %>%
+##   #as_gt() |>                      # Add a note
+##   #gt::tab_source_note(gt::md("*mtcars is from the **datasets** package*")) |>
 ```
 
 ```{r}
 ## ## strata2 doesn't seem to work very well, especially for numeric variables
 ##
 ## table1_out_strata2 <-
-##   dat_mtcars_e %>%
+##   dat_mtcars_e |>
 ##   gtsummary::tbl_strata2(
 ##     strata       = Var[["list"]][["var_groups"]][c(1, 3)] # use gtsummary::tbl_strata2 for more than 1
 ##   , .tbl_fun =
-##       ~ .x %>%
+##       ~ .x |>
 ##         gtsummary::tbl_summary(
 ##           by           = Var[["list"]][["var_groups"]][2] # use gtsummary::tbl_strata2 for more than 1
 ##         # , label        = NULL                          # automatically uses the label attribute
@@ -335,27 +335,27 @@ table1_out_diff_strata %>%
 ##         # , sort         = NULL
 ##         # , percent      = NULL
 ##         #, include      = Var[["list"]][["var_demo"]]  # not working here or in the tbl_strata() argument
-##         ) %>%
-##         gtsummary::add_p()          %>%  # add p-values to the output comparing values across groups
-##         #gtsummary::add_q()          %>%  # add a column of q values to control for multiple comparisons
-##         gtsummary::bold_p(t = 0.05, q = FALSE) %>% # Bold significant p-values or q-values
-##         #gtsummary::add_difference() %>%  # add column for difference between two group, confidence interval, and p-value
-##         #gtsummary::add_ci()         %>%  # add confidence intervals
-##         gtsummary::add_overall()    %>%  # add a column with overall summary statistics
-##         gtsummary::add_stat_label() %>%  # add label for the summary statistics shown in each row
+##         ) |>
+##         gtsummary::add_p()          |>  # add p-values to the output comparing values across groups
+##         #gtsummary::add_q()          |>  # add a column of q values to control for multiple comparisons
+##         gtsummary::bold_p(t = 0.05, q = FALSE) |> # Bold significant p-values or q-values
+##         #gtsummary::add_difference() |>  # add column for difference between two group, confidence interval, and p-value
+##         #gtsummary::add_ci()         |>  # add confidence intervals
+##         gtsummary::add_overall()    |>  # add a column with overall summary statistics
+##         gtsummary::add_stat_label() |>  # add label for the summary statistics shown in each row
 ##         gtsummary::add_n()               # add a column with N (or N missing) for each variable
-##         #gtsummary::bold_labels()    %>%  # bold variable name labels
+##         #gtsummary::bold_labels()    |>  # bold variable name labels
 ##         #gtsummary::italicize_levels()   # italicize levels
 ##
 ##   #, .header = "**{strata}**, N = {n}"
-##   ) %>%
+##   ) |>
 ##   gtsummary::modify_caption("Table title")
 ##
 ## # print to Viewer
 ## table1_out_strata2
 ##
 ## # export to Excel
-## table1_out_strata2 %>%
+## table1_out_strata2 |>
 ##   gtsummary::as_hux_xlsx(file = "Table1_out_strata2.xlsx")
 ```
 
@@ -385,11 +385,11 @@ fit_lm <-
   , data = dat_mtcars_e
   )
 
-fit_lm %>% car::Anova(type = 3)
-fit_lm %>% summary()
+fit_lm |> car::Anova(type = 3)
+fit_lm |> summary()
 
 tab_fit_lm <-
-  fit_lm %>%
+  fit_lm |>
   gtsummary::tbl_regression(
   #  label           = NULL
   #, exponentiate    = FALSE
@@ -402,23 +402,23 @@ tab_fit_lm <-
   #, tidy_fun        = NULL
   #, add_estimate_to_reference_rows = FALSE
   , conf.int        = TRUE
-  ) %>%
-  #gtsummary::add_q()                  %>%  # add a column of q values to control for multiple comparisons
-  gtsummary::bold_p(t = 0.05, q = FALSE) %>% # Bold significant p-values or q-values
-  gtsummary::add_global_p()           %>%  # adds the global p-value for a categorical variables, instead of difference from intercept
-  gtsummary::add_glance_source_note() %>%  # adds statistics from `broom::glance()` as source note
-  gtsummary::add_vif(statistic = c("VIF", "GVIF", "aGVIF", "df")[c(2, 4)])  %>%  # adds column of the variance inflation factors (VIF)
-  gtsummary::bold_labels()    %>%  # bold variable name labels
-  gtsummary::italicize_levels() %>% # italicize levels
+  ) |>
+  #gtsummary::add_q()                  |>  # add a column of q values to control for multiple comparisons
+  gtsummary::bold_p(t = 0.05, q = FALSE) |> # Bold significant p-values or q-values
+  gtsummary::add_global_p()           |>  # adds the global p-value for a categorical variables, instead of difference from intercept
+  gtsummary::add_glance_source_note() |>  # adds statistics from `broom::glance()` as source note
+  gtsummary::add_vif(statistic = c("VIF", "GVIF", "aGVIF", "df")[c(2, 4)])  |>  # adds column of the variance inflation factors (VIF)
+  gtsummary::bold_labels()    |>  # bold variable name labels
+  gtsummary::italicize_levels() |> # italicize levels
   gtsummary::modify_caption("Table title")
 
 tab_fit_lm
 
-##   gtsummary::add_significance_stars() %>% # add significance stars to estimates with small p-values (regression table)
+##   gtsummary::add_significance_stars() |> # add significance stars to estimates with small p-values (regression table)
 
 
 # export to Excel
-tab_fit_lm %>%
+tab_fit_lm |>
   gtsummary::as_hux_xlsx(file = "Table_fit_lm.xlsx")
 ```
 
@@ -441,13 +441,13 @@ prop.table(tab_xtabs, margin = 2)
 
 # Chi-square test approximation
 tab_xtabs_chisq <-
-  tab_xtabs %>%
+  tab_xtabs |>
   chisq.test(correct = FALSE)
 tab_xtabs_chisq
 
 # Fisher's exact test
 tab_xtabs_fisher <-
-  tab_xtabs %>%
+  tab_xtabs |>
   fisher.test()
 tab_xtabs_fisher
 
@@ -456,7 +456,7 @@ tab_xtabs_fisher
 ## gtsummary tables
 
 tab_cross <-
-  dat_mtcars_e %>%
+  dat_mtcars_e |>
   gtsummary::tbl_cross(
     row          = "cyl"
   , col          = "am"
@@ -468,16 +468,16 @@ tab_cross <-
   , missing      = c("ifany", "always", "no")[1]
   , missing_text = "Unknown"
   , margin_text  = "Total"
-  ) %>%
-  gtsummary::add_p()          %>%  # add p-values to the output comparing values across groups (tbl_cross options: test = c("chisq.test", "fisher.test")[2])
-  gtsummary::bold_labels()    %>%  # bold variable name labels
-  gtsummary::italicize_levels() %>% # italicize levels
+  ) |>
+  gtsummary::add_p()          |>  # add p-values to the output comparing values across groups (tbl_cross options: test = c("chisq.test", "fisher.test")[2])
+  gtsummary::bold_labels()    |>  # bold variable name labels
+  gtsummary::italicize_levels() |> # italicize levels
   gtsummary::modify_caption("Table title")
 
 tab_cross
 
 # export to Excel
-tab_cross %>%
+tab_cross |>
   gtsummary::as_hux_xlsx(file = "Table_cross.xlsx")
 
 ```
