--- a/data-raw/qmd_template/erik_qmd_template_presentation_pptx.qmd
+++ b/data-raw/qmd_template/erik_qmd_template_presentation_pptx.qmd
@@ -15,36 +15,81 @@ doi-title:          DOI
 appendix-style:     default     # plain, default, none  # https://quarto.org/docs/authoring/appendices.html
 lang:               en
 format:
-  pptx:                               # pptx format https://quarto.org/docs/presentations/powerpoint.html
-                                      # PowerPoint Options https://quarto.org/docs/reference/formats/presentations/pptx.html
-    theme:                  litera    # default, cerulean, cosmo, cyborg, darkly, flatly, journal, litera, lumen, lux, materia, minty, morph, pulse, quartz, sandstone, simplex, sketchy, slate, solar, spacelab, superhero, united, vapor, yeti, zephyr
-    highlight-style:        atom-one  # a11y, arrow, atom-one, ayu, breeze, github, gruvbox; pygments, tango, espresso, zenburn, kate, monochrome, breezedark, haddock; dracula, mokokai, nord, oblivion, printing, radical, solarized, vim-dark
-    #page-layout:            full      # article, full   # https://quarto.org/docs/output-formats/page-layout.html
-    toc:                    true
-    toc-depth:              4
-    #toc-location:           body      # left, body, right
-    toc-title:              Contents
-    number-sections:        true      # true, false
-    number-offset:          0         # Offset for section headings in output
-    #number-depth:           5
-    shift-heading-level-by: -1        # Shift heading levels by a positive or negative integer. if -1, level 2 headings become level 1 headings, etc.
-    incremental:            false     # if true, then lists: ::: {.incremental} or ::: {.nonincremental}
-    slide-level:            2         # Specifies that headings with the specified level create slides. Headings above this level in the hierarchy are used to divide the slide show into sections; headings below this level create subheads within a slide.
-    #code-fold:              show      # true (initially hidden), false, show (initially shown)
-    #code-tools:                       # menu top-right to show/hide all code
-    #  toggle:               true
-    #  caption:              "Code"    # none
-    #  source:               false
-    #code-summary:           "Code"    #, click to show"
-    #code-overflow:          scroll    # scroll, wrap
-    #code-block-bg:          true
-    #code-block-border-left: "#30B0E0"
-    #code-copy:              hover     # true, false, hover a copy buttom in top-right of code block
-    tbl-colwidths:          auto      # Apply explicit table column widths for markdown grid tables and pipe tables that are more than columns characters wide (72 by default).
-    df-print:               paged     # default, kable, tibble, paged   # https://quarto.org/docs/computations/r.html
-    self-contained:         false     # !!! this can cause a render error: "ERROR: The process cannot access the file because it is being used by another process. (os error 32)"
-    self-contained-math:    true
-    #html-math-method: katex    # https://quarto.org/docs/output-formats/html-basics.html
+  beamer:                               # pptx format https://quarto.org/docs/presentations/powerpoint.html
+                                      # Beamer Options https://quarto.org/docs/presentations/beamer.html, https://quarto.org/docs/reference/formats/presentations/beamer.html
+    aspectratio: 169            # slide aspect ratio (43 for 4:3 [default], 169 for 16:9, 1610 for 16:10, 149 for 14:9, 141 for 1.41:1, 54 for 5:4, 32 for 3:2)
+    beamerarticle: false        # produce an article from Beamer slides
+    #beameroption: \setbeameroption{}  # add extra beamer option with \setbeameroption{}
+    institute:  StatAcumen.com and UNM # author affiliations: can be a list when there are multiple authors
+    #logo:   # logo image for slides
+    navigation: empty # controls navigation symbols (default is empty for no navigation symbols; other valid values are frame, vertical, and horizontal)
+    section-titles: true # enables "title pages" for new sections (default is true)
+                                # https://deic.uab.cat/~iblanes/beamer_gallery/individual/CambridgeUS-dove-structurebold.html
+    theme:       CambridgeUS    # beamer themes, AnnArbor Antibes Bergen Berkeley Berlin Boadilla boxes CambridgeUS Copenhagen Darmstadt default Dresden Frankfurt Goettingen Hannover Ilmenau JuanLesPins Luebeck Madrid Malmoe Marburg Montpellier PaloAlto Pittsburgh Rochester Singapore Szeged Warsaw
+    colortheme:  dove           # beamer themes, albatross beaver beetle crane default dolphin dove fly lily orchid rose seagull seahorse sidebartab structure whale wolverine
+    fonttheme:   structurebold  # beamer themes, default professionalfonts serif structurebold structureitalicserif structuresmallcapsserif
+    #innertheme:  # beamer themes
+    #outertheme:  # beamer themes
+    #themeoptions:   # options for LaTeX beamer themes (a list).
+    #titlegraphic:   # image for title slide
+    #
+    ## Other options
+    ##page-layout:            full      # article, full   # https://quarto.org/docs/output-formats/page-layout.html
+    #toc:                    true
+    #toc-depth:              4
+    ##toc-location:           body      # left, body, right
+    #toc-title:              Contents
+    #number-sections:        true      # true, false
+    #number-offset:          0         # Offset for section headings in output
+    ##number-depth:           5
+    #shift-heading-level-by: -1        # Shift heading levels by a positive or negative integer. if -1, level 2 headings become level 1 headings, etc.
+    #incremental:            false     # if true, then lists: ::: {.incremental} or ::: {.nonincremental}
+    #slide-level:            2         # Specifies that headings with the specified level create slides. Headings above this level in the hierarchy are used to divide the slide show into sections; headings below this level create subheads within a slide.
+    ##code-fold:              show      # true (initially hidden), false, show (initially shown)
+    ##code-tools:                       # menu top-right to show/hide all code
+    ##  toggle:               true
+    ##  caption:              "Code"    # none
+    ##  source:               false
+    ##code-summary:           "Code"    #, click to show"
+    ##code-overflow:          scroll    # scroll, wrap
+    ##code-block-bg:          true
+    ##code-block-border-left: "#30B0E0"
+    ##code-copy:              hover     # true, false, hover a copy buttom in top-right of code block
+    #tbl-colwidths:          auto      # Apply explicit table column widths for markdown grid tables and pipe tables that are more than columns characters wide (72 by default).
+    #df-print:               paged     # default, kable, tibble, paged   # https://quarto.org/docs/computations/r.html
+    #self-contained:         false     # !!! this can cause a render error: "ERROR: The process cannot access the file because it is being used by another process. (os error 32)"
+    #self-contained-math:    true
+    ##html-math-method: katex    # https://quarto.org/docs/output-formats/html-basics.html
+#  pptx:                               # pptx format https://quarto.org/docs/presentations/powerpoint.html
+#                                      # PowerPoint Options https://quarto.org/docs/reference/formats/presentations/pptx.html
+#    theme:                  litera    # default, cerulean, cosmo, cyborg, darkly, flatly, journal, litera, lumen, lux, materia, minty, morph, pulse, quartz, sandstone, simplex, sketchy, slate, solar, spacelab, superhero, united, vapor, yeti, zephyr
+#    highlight-style:        atom-one  # a11y, arrow, atom-one, ayu, breeze, github, gruvbox; pygments, tango, espresso, zenburn, kate, monochrome, breezedark, haddock; dracula, mokokai, nord, oblivion, printing, radical, solarized, vim-dark
+#    #page-layout:            full      # article, full   # https://quarto.org/docs/output-formats/page-layout.html
+#    toc:                    true
+#    toc-depth:              4
+#    #toc-location:           body      # left, body, right
+#    toc-title:              Contents
+#    number-sections:        true      # true, false
+#    number-offset:          0         # Offset for section headings in output
+#    #number-depth:           5
+#    shift-heading-level-by: -1        # Shift heading levels by a positive or negative integer. if -1, level 2 headings become level 1 headings, etc.
+#    incremental:            false     # if true, then lists: ::: {.incremental} or ::: {.nonincremental}
+#    slide-level:            2         # Specifies that headings with the specified level create slides. Headings above this level in the hierarchy are used to divide the slide show into sections; headings below this level create subheads within a slide.
+#    #code-fold:              show      # true (initially hidden), false, show (initially shown)
+#    #code-tools:                       # menu top-right to show/hide all code
+#    #  toggle:               true
+#    #  caption:              "Code"    # none
+#    #  source:               false
+#    #code-summary:           "Code"    #, click to show"
+#    #code-overflow:          scroll    # scroll, wrap
+#    #code-block-bg:          true
+#    #code-block-border-left: "#30B0E0"
+#    #code-copy:              hover     # true, false, hover a copy buttom in top-right of code block
+#    tbl-colwidths:          auto      # Apply explicit table column widths for markdown grid tables and pipe tables that are more than columns characters wide (72 by default).
+#    df-print:               paged     # default, kable, tibble, paged   # https://quarto.org/docs/computations/r.html
+#    self-contained:         false     # !!! this can cause a render error: "ERROR: The process cannot access the file because it is being used by another process. (os error 32)"
+#    self-contained-math:    true
+#    #html-math-method: katex    # https://quarto.org/docs/output-formats/html-basics.html
 title-block-style:          default   # plain, none
 title-block-banner:         false     # background color: true, false, "#95b7fc"
 title-block-banner-color:   "#232323" # text color: "#232323"
@@ -99,6 +144,96 @@ set.seed(my_seed)
 ```
 
 
+# Executive summary
+
+* Model features
+* Accuracy
+* Reduce potential 100% at risk down to XX% at risk
+
+
+# Presentations
+
+Use story structure in the first five slides to set up the scenario and characters in your heroic journey.
+Chapter 4 of Cliff Atkinson's "https://www.beyondbulletpoints.com/ Beyond Bullet Points" tells you how.
+
+1. The Setting Headline Where am I, and when is it?
+2. The Role Headline Who am I in this setting?
+3. The Point A Headline What chal lenge do I face in this setting?
+4. The Point B Headline Where do I want to be?
+  - (The Gap Between A and B) Why am I here?
+5. The Call to Action Headline How do I get from A to B?
+
+Chapter 5 was also helpful for structuring the remaining slides in a hierarchy
+  of key points (sections) with explanations (subsections) and details (slides).
+
+
+# Key Point 1
+
+## Explanation 1
+
+* Detail
+* Detail
+* Detail
+
+## Explanation 2
+
+* Detail
+* Detail
+* Detail
+
+## Explanation 3
+
+* Detail
+* Detail
+* Detail
+
+# Key Point 2
+
+## Explanation 1
+
+* Detail
+* Detail
+* Detail
+
+## Explanation 2
+
+* Detail
+* Detail
+* Detail
+
+## Explanation 3
+
+* Detail
+* Detail
+* Detail
+
+# Key Point 3
+
+## Explanation 1
+
+* Detail
+* Detail
+* Detail
+
+## Explanation 2
+
+* Detail
+* Detail
+* Detail
+
+## Explanation 3
+
+* Detail
+* Detail
+* Detail
+
+# Conclusion
+
+
+
+
+
+<!--#
 
 # Executive summary {#sec-Executive_summary}
 
@@ -589,3 +724,5 @@ cat("### Dynamic Heading 3\n")
 Sections of your document can be added to the Appendix that appears at the end
 of your article by adding the .appendix class to any header.
 
+
+-->
